A small fix to avoid words overflowing the view port

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,6 +2,7 @@ body {
   font-family: Verdana, Helvetica, Arial, sans-serif;
   background-color: #DDDAD6;
   padding: 4% 4% 4% 4%;
+  word-wrap: break-word;
 }
 
 li {
